# python-project-50

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: my-CI.yml
gendiff/: __init__.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
gendiff/tools/: __init__.py  generator.py  get_data.py  get_difference.py  internal_representation.py  parse_data.py  read_data.py
tests/: test_gendiff.py
tests/fixtures/: deep_result(json).txt
