[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["alexandrageev87@gmail.com>"]
readme = "README.md"
classifiers = [
    "Topic :: Education",
    "Topic :: Utilities"
]
repository = "github.com:Alexander-Ageev/python-project-50.git"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
jsondiff = "^2.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
try = "gendiff.temp.temp:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
